--- a/src/views/Dialog/containers/Group.scss
+++ b/src/views/Dialog/containers/Group.scss
@@ -4,6 +4,22 @@
   margin: 10px 0 0;
 
   &Variant {
+    &Comment {
+      .Author {
+        align-items: center;
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .Avatar {
+        margin: 0 0 0 20px;
+      }
+
+      .Title {
+        margin: auto;
+      }
+    }
+
     &Outcoming {
       flex-direction: row-reverse;
 
