--- a/src/views/Dialog/containers/Message.scss
+++ b/src/views/Dialog/containers/Message.scss
@@ -5,10 +5,28 @@
   border-radius: 15px;
   display: flex;
   margin: 10px 0 0;
-  max-width: 70%;
   padding: 8px 12px;
 
   &Variant {
+    &Comment {
+      background: none;
+      border-radius: 0;
+      border-top: 2px solid $color-green-500;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      .Text {
+        max-width: 80%;
+        text-align: center;
+      }
+    }
+
+    &Incoming,
+    &Outcoming {
+      max-width: 70%;
+    }
+
     &Outcoming {
       background-color: $color-blue-50;
     }
