--- a/src/views/Dialog/containers/Group.scss
+++ b/src/views/Dialog/containers/Group.scss
@@ -27,31 +27,30 @@
     &Outcoming {
       flex-direction: row-reverse;
 
-      .MessageGroup {
-        text-align: right;
-      }
-
       .Messages {
-        align-items: flex-end;
+        text-align: right;
+
+        &Block {
+          align-items: flex-end;
+        }
       }
     }
   }
 }
 
 .Author {
-  display: inline;
   font-size: 12px;
   font-weight: 600;
   margin: 0 10px;
 }
 
-.MessageGroup {
+.Messages {
   margin: 0 10px;
   width: 100%;
-}
 
-.Messages {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
+  &Block {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+  }
 }
