--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -2,21 +2,12 @@
 
 .Root {
   display: flex;
-  height: 40px;
-  margin: 0 0 30px;
-  padding: 0 10px;
-}
-
-.Author,
-.LastMessage {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
+  margin: 30px 0 0 0;
 }
 
 .Avatar {
   flex: 0 0 40px;
-  height: 40px;
+  width: 40px;
 }
 
 .Counter {
@@ -28,23 +19,24 @@
   padding: 2px 8px;
 }
 
-.Info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0 0 0 20px;
-  width: 100%;
-}
-
-.LastDate {
+.Date {
   color: $color-gray-500;
   font-size: 12px;
+}
+
+.Info {
+  margin: 0 0 0 20px;
+  width: 100%;
+
+  & > *:last-child {
+    margin: 2px 0 0 0;
+  }
 }
 
 .Message {
   color: $color-gray-500;
   font-size: 12px;
-  max-width: 188px;
+  max-width: calc(380px - 170px);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -52,4 +44,10 @@
 
 .Name {
   font-weight: 600;
+}
+
+.Row {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
