--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -11,7 +11,7 @@
   width: 40px;
 }
 
-.Counter {
+.Badge {
   border: 1px solid $color-gray-500;
   border-radius: 12px;
   color: $color-gray-500;
@@ -45,6 +45,11 @@
 
 .Name {
   font-weight: 600;
+}
+
+.NavLink {
+  color: $color-gray-800;
+  text-decoration: none;
 }
 
 .Row {
