--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -1,9 +1,25 @@
 @import '~@styles/colors.scss';
 
 .Root {
+  border-radius: 8px;
+  color: $color-gray-800;
   display: flex;
-  margin: 30px 0 0;
+  margin: 10px 0 0;
+  padding: 10px;
+  text-decoration: none;
   width: 100%;
+
+  &Is {
+    &Selected {
+      background-color: rgba($color-blue-300, .2);
+
+      .Badge {
+        background-color: $color-gray-100;
+        border: 1px solid rgba($color-blue-300, .2);
+        color: $color-blue-300;
+      }
+    }
+  }
 }
 
 .Avatar {
@@ -45,11 +61,6 @@
 
 .Name {
   font-weight: 600;
-}
-
-.NavLink {
-  color: $color-gray-800;
-  text-decoration: none;
 }
 
 .Row {
