--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -22,19 +22,26 @@
   }
 }
 
+.Author {
+  color: $color-blue-300;
+}
+
 .Avatar {
   flex: 0 0 40px;
   width: 40px;
 }
 
 .Badge {
+  align-items: center;
   border: 1px solid $color-gray-500;
   border-radius: 12px;
   color: $color-gray-500;
+  display: flex;
   font-size: 12px;
   font-weight: 600;
+  height: 20px;
   margin: 0 0 0 4px;
-  padding: 2px 8px;
+  padding: 0 6px;
 }
 
 .Date {
@@ -47,7 +54,7 @@
   width: calc(100% - 64px);
 
   & > *:last-child {
-    margin: 4px 0 0 0;
+    margin: 6px 0 0 0;
   }
 }
 
